# artifacts/api-server/src/routes/admin.ts
@@ -4,5 +4,6 @@ import { createGmailWatchHandler } from "./gmail";
 const router: IRouter = Router();
 
 router.post("/activate-gmail-watch", createGmailWatchHandler(true));
+router.post("/renew-gmail-watch", createGmailWatchHandler(true, true));
 
 export default router;
